<resources>
    <string name="app_name">Calculator Bela Negara</string>

    <!-- Tombol operasi dasar -->
    <string name="btn_off">OFF</string>
    <string name="btn_clear">C</string>
    <string name="btn_percent">%</string>
    <string name="btn_division">÷</string>
    <string name="btn_multiply">×</string>
    <string name="btn_subtract">−</string>
    <string name="btn_add">+</string>
    <string name="btn_equal">=</string>
    <string name="btn_point">.</string>

    <!-- Tombol angka -->
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
</resources>