<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/off"
                android:text="@string/btn_off"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear"
                android:text="@string/btn_clear"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/percent"
                android:text="@string/btn_percent"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/division"
                android:text="@string/btn_division"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
        </TableRow>

        <TableRow>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn7"
                android:text="@string/btn_7"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn8"
                android:text="@string/btn_8"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn9"
                android:text="@string/btn_9"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                android:text="@string/btn_multiply"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
        </TableRow>

        <TableRow>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn4"
                android:text="@string/btn_4"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn5"
                android:text="@string/btn_5"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn6"
                android:text="@string/btn_6"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/subtract"
                android:text="@string/btn_subtract"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
        </TableRow>

        <TableRow>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                android:text="@string/btn_1"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                android:text="@string/btn_2"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                android:text="@string/btn_3"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                android:text="@string/btn_add"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
        </TableRow>

        <TableRow>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn0"
                android:text="@string/btn_0"
                android:layout_span="2"
                android:layout_weight="2"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPoint"
                android:text="@string/btn_point"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/equal"
                android:text="@string/btn_equal"
                android:layout_weight="1"
                android:layout_height="100dp"
                android:textSize="25sp"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
